<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cqu.wwt.surveynew.Question_3">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:paddingTop="80dp"
        android:text="@string/QUESTION_3"
        android:id="@+id/QUE_3_BIGTITLE"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_below="@id/QUE_3_BIGTITLE"
        android:id="@+id/QUE_3_TITLE"
        android:text="@string/QUESTION_3_TITLE"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/QUE_3_TITLE"
        android:layout_marginTop="20dp"
        android:id="@+id/QUE_3_CHOICES"
        android:layout_marginLeft="135dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QUESTION_3_CHOICE_1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QUESTION_3_CHOICE_2"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QUESTION_3_CHOICE_3"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QUESTION_3_CHOICE_3"/>
    </RadioGroup>
    <Button
        android:id="@+id/QUE_3_NEXT"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QUE_3_CHOICES"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="Next" />
    <Button
        android:id="@+id/QUE_3_BACK"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QUE_3_NEXT"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="Back" />
</RelativeLayout>
