<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cqu.wwt.surveynew.Question_9">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:paddingTop="80dp"
        android:text="@string/QUESTION_9"
        android:id="@+id/QUE_9_BIGTITLE"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_below="@id/QUE_9_BIGTITLE"
        android:id="@+id/QUE_9_TITLE"
        android:text="@string/QUESTION_9_TITLE"
        />
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_below="@+id/QUE_9_TITLE"
            android:text="@string/QUESTION_9_CHOICE_1"
            android:id="@+id/QUE_9_CHOICE_1"
        android:layout_marginLeft="150dp"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/QUE_9_CHOICE_1"
            android:text="@string/QUESTION_9_CHOICE_2"
            android:id="@+id/QUE_9_CHOICE_2"
        android:layout_marginLeft="150dp"/>
        />
    <Button
        android:id="@+id/QUE_9_NEXT"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QUE_9_CHOICE_2"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="Next" />
    <Button
        android:id="@+id/QUE_9_BACK"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/QUE_9_NEXT"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="Back" />
</RelativeLayout>
